@@ -25,7 +25,6 @@ public class CheckBoxChoiceController implements IModalController {
 
 	protected StageInitializer initializer;
 	private Stage dialogStage;
-	private FxData data;
 	private FxData result;
 
 	@FXML
@@ -39,7 +38,7 @@ public class CheckBoxChoiceController implements IModalController {
 		boolean isAllSelectedEqualsNull = result.isAllSelectedEqualsNull();
 		result = new FxData();
 		List<String> list = content.getChildren().stream().filter(cb -> ((JFXCheckBox) cb).isSelected())
-				.map(cb -> ((JFXCheckBox) cb).getText()).collect(Collectors.toList());
+				.map(cb -> ((JFXCheckBox) cb).getText()).toList();
 		if (isAllSelectedEqualsNull && list.isEmpty()) {
 			throw new NoSelectionException();
 		} else if (isAllSelectedEqualsNull || !areAllCheckBoxChecked()) {
