@@ -4,6 +4,7 @@ import fr.vbillard.tissusdeprincesseboot.dao.TissuDao;
 import fr.vbillard.tissusdeprincesseboot.dtos_fx.TissuDto;
 import fr.vbillard.tissusdeprincesseboot.exception.IllegalData;
 import fr.vbillard.tissusdeprincesseboot.filtre.specification.TissuSpecification;
+import fr.vbillard.tissusdeprincesseboot.mapper.MapperService;
 import fr.vbillard.tissusdeprincesseboot.model.Rangement;
 import fr.vbillard.tissusdeprincesseboot.model.Tissu;
 import fr.vbillard.tissusdeprincesseboot.model.enums.UnitePoids;
@@ -12,18 +13,17 @@ import javafx.collections.ObservableList;
 import lombok.AllArgsConstructor;
 import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
-import org.modelmapper.ModelMapper;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @AllArgsConstructor
 public class TissuService extends AbstractDtoService<Tissu, TissuDto> {
 
-	private ModelMapper mapper;
+	private MapperService mapper;
 	private TissuDao dao;
 
 	private static final Logger LOGGER = LogManager.getLogger(TissuService.class);
@@ -33,8 +33,9 @@ public class TissuService extends AbstractDtoService<Tissu, TissuDto> {
 		return dao.existsByReference(string);
 	}
 
+	@Transactional
 	public void delete(TissuDto dto) {
-		delete(mapper.map(dto, Tissu.class));
+		delete(convert(dto));
 	}
 
 	@Override
@@ -66,7 +67,7 @@ public class TissuService extends AbstractDtoService<Tissu, TissuDto> {
 
 	public ObservableList<TissuDto> getObservablePage(int page, int pageSize) {
 		return FXCollections.observableArrayList(dao.findAllByArchived(PageRequest.of(page, pageSize), false).stream()
-				.map(this::convert).collect(Collectors.toList()));
+				.map(this::convert).toList());
 	}
 
 	public int getLongueurUtilisee(int tissuId) {
@@ -83,7 +84,7 @@ public class TissuService extends AbstractDtoService<Tissu, TissuDto> {
 
 	public List<TissuDto> getObservablePage(int page, int pageSize, TissuSpecification specification) {
 		return FXCollections.observableArrayList(dao.findAll(specification, PageRequest.of(page, pageSize)).stream()
-				.map(this::convert).collect(Collectors.toList()));
+				.map(this::convert).toList());
 	}
 
 	/**
@@ -99,12 +100,12 @@ public class TissuService extends AbstractDtoService<Tissu, TissuDto> {
 
 	@Override
 	public Tissu convert(TissuDto dto) {
-		return mapper.map(dto, Tissu.class);
+		return mapper.map(dto);
 	}
 
 	@Override
 	public TissuDto convert(Tissu entity) {
-		return mapper.map(entity, TissuDto.class);
+		return mapper.map(entity);
 	}
 
     public int countByRangementId(int id) {
